Ajout interface connexion ajout fichier data xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Robot android</string>
+    <string name="seConnecter">Se connecter</string>
+    <string name="identifiant">Identifiant</string>
+    <string name="retour">retour</string>
+    <string name="password">Mot de passe</string>
 </resources>
