Push global Ajout de la fonctionnalité de lister les adresses ip des appareils connectés sur le wifi (à tester) Modification gradle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="envoieMessage">Envoyer un message sur le réseau :</string>
     <string name="hintEnvoieMessage">Ecrivez votre message ici</string>
     <string name="envoieMessageBtn">Envoyer</string>
+    <string name="etatWifi">état du Wifi :</string>
+
 
 </resources>
